; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/user32/extr_ScrollWindowEx.c_Test_ScrollWindowEx.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/user32/extr_ScrollWindowEx.c_Test_ScrollWindowEx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i32] [i32 66, i32 85, i32 84, i32 84, i32 79, i32 78, i32 0], align 4
@.str.1 = private unnamed_addr constant [11 x i32] [i32 84, i32 101, i32 115, i32 116, i32 87, i32 105, i32 110, i32 100, i32 111, i32 119, i32 0], align 4
@WS_OVERLAPPEDWINDOW = common dso_local global i32 0, align 4
@WS_VISIBLE = common dso_local global i32 0, align 4
@CW_USEDEFAULT = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@NULLREGION = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [13 x i8] c"Result = %d\0A\00", align 1
@SIMPLEREGION = common dso_local global i32 0, align 4
@SW_INVALIDATE = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Test_ScrollWindowEx() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = load i32, i32* @WS_OVERLAPPEDWINDOW, align 4
  %5 = load i32, i32* @WS_VISIBLE, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @CW_USEDEFAULT, align 4
  %8 = load i32, i32* @CW_USEDEFAULT, align 4
  %9 = call i32 @CreateWindowW(i8* bitcast ([7 x i32]* @.str to i8*), i8* bitcast ([11 x i32]* @.str.1 to i8*), i32 %6, i32 %7, i32 %8, i32 100, i32 100, i32* null, i32* null, i32 0, i32 0)
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @UpdateWindow(i32 %10)
  %12 = call i32* @CreateRectRgn(i32 0, i32 0, i32 0, i32 0)
  store i32* %12, i32** %2, align 8
  %13 = load i32, i32* %1, align 4
  %14 = load i32*, i32** %2, align 8
  %15 = load i32, i32* @FALSE, align 4
  %16 = call i32 @GetUpdateRgn(i32 %13, i32* %14, i32 %15)
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @NULLREGION, align 4
  %19 = icmp eq i32 %17, %18
  %20 = zext i1 %19 to i32
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @ok(i32 %20, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 %21)
  %23 = load i32, i32* %1, align 4
  %24 = call i32 @ScrollWindowEx(i32 %23, i32 20, i32 0, i32* null, i32* null, i32* null, i32* null, i32 0)
  store i32 %24, i32* %3, align 4
  %25 = load i32, i32* %3, align 4
  %26 = load i32, i32* @SIMPLEREGION, align 4
  %27 = icmp eq i32 %25, %26
  %28 = zext i1 %27 to i32
  %29 = load i32, i32* %3, align 4
  %30 = call i32 @ok(i32 %28, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 %29)
  %31 = load i32, i32* %1, align 4
  %32 = load i32*, i32** %2, align 8
  %33 = load i32, i32* @FALSE, align 4
  %34 = call i32 @GetUpdateRgn(i32 %31, i32* %32, i32 %33)
  store i32 %34, i32* %3, align 4
  %35 = load i32, i32* %3, align 4
  %36 = load i32, i32* @NULLREGION, align 4
  %37 = icmp eq i32 %35, %36
  %38 = zext i1 %37 to i32
  %39 = load i32, i32* %3, align 4
  %40 = call i32 @ok(i32 %38, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 %39)
  %41 = load i32, i32* %1, align 4
  %42 = load i32, i32* @SW_INVALIDATE, align 4
  %43 = call i32 @ScrollWindowEx(i32 %41, i32 20, i32 0, i32* null, i32* null, i32* null, i32* null, i32 %42)
  store i32 %43, i32* %3, align 4
  %44 = load i32, i32* %3, align 4
  %45 = load i32, i32* @SIMPLEREGION, align 4
  %46 = icmp eq i32 %44, %45
  %47 = zext i1 %46 to i32
  %48 = load i32, i32* %3, align 4
  %49 = call i32 @ok(i32 %47, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 %48)
  %50 = load i32, i32* %1, align 4
  %51 = load i32*, i32** %2, align 8
  %52 = load i32, i32* @FALSE, align 4
  %53 = call i32 @GetUpdateRgn(i32 %50, i32* %51, i32 %52)
  store i32 %53, i32* %3, align 4
  %54 = load i32, i32* %3, align 4
  %55 = load i32, i32* @SIMPLEREGION, align 4
  %56 = icmp eq i32 %54, %55
  %57 = zext i1 %56 to i32
  %58 = load i32, i32* %3, align 4
  %59 = call i32 @ok(i32 %57, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 %58)
  %60 = load i32, i32* %1, align 4
  %61 = call i32 @UpdateWindow(i32 %60)
  %62 = load i32*, i32** %2, align 8
  %63 = call i32 @DeleteObject(i32* %62)
  %64 = load i32, i32* %1, align 4
  %65 = load i32*, i32** %2, align 8
  %66 = load i32, i32* @SW_INVALIDATE, align 4
  %67 = call i32 @ScrollWindowEx(i32 %64, i32 20, i32 0, i32* null, i32* null, i32* %65, i32* null, i32 %66)
  store i32 %67, i32* %3, align 4
  %68 = load i32, i32* %3, align 4
  %69 = load i32, i32* @ERROR, align 4
  %70 = icmp eq i32 %68, %69
  %71 = zext i1 %70 to i32
  %72 = load i32, i32* %3, align 4
  %73 = call i32 @ok(i32 %71, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 %72)
  %74 = call i32* @CreateRectRgn(i32 0, i32 0, i32 0, i32 0)
  store i32* %74, i32** %2, align 8
  %75 = load i32, i32* %1, align 4
  %76 = call i32 @UpdateWindow(i32 %75)
  %77 = load i32, i32* %1, align 4
  %78 = load i32, i32* @SW_INVALIDATE, align 4
  %79 = call i32 @ScrollWindowEx(i32 %77, i32 20, i32 0, i32* null, i32* null, i32* null, i32* inttoptr (i64 1 to i32*), i32 %78)
  store i32 %79, i32* %3, align 4
  %80 = load i32, i32* %3, align 4
  %81 = load i32, i32* @ERROR, align 4
  %82 = icmp eq i32 %80, %81
  %83 = zext i1 %82 to i32
  %84 = load i32, i32* %3, align 4
  %85 = call i32 @ok(i32 %83, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 %84)
  %86 = load i32, i32* %1, align 4
  %87 = load i32*, i32** %2, align 8
  %88 = load i32, i32* @FALSE, align 4
  %89 = call i32 @GetUpdateRgn(i32 %86, i32* %87, i32 %88)
  store i32 %89, i32* %3, align 4
  %90 = load i32, i32* %3, align 4
  %91 = load i32, i32* @SIMPLEREGION, align 4
  %92 = icmp eq i32 %90, %91
  %93 = zext i1 %92 to i32
  %94 = load i32, i32* %3, align 4
  %95 = call i32 @ok(i32 %93, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 %94)
  %96 = load i32*, i32** %2, align 8
  %97 = call i32 @DeleteObject(i32* %96)
  %98 = load i32, i32* %1, align 4
  %99 = call i32 @DestroyWindow(i32 %98)
  ret void
}

declare dso_local i32 @CreateWindowW(i8*, i8*, i32, i32, i32, i32, i32, i32*, i32*, i32, i32) #1

declare dso_local i32 @UpdateWindow(i32) #1

declare dso_local i32* @CreateRectRgn(i32, i32, i32, i32) #1

declare dso_local i32 @GetUpdateRgn(i32, i32*, i32) #1

declare dso_local i32 @ok(i32, i8*, i32) #1

declare dso_local i32 @ScrollWindowEx(i32, i32, i32, i32*, i32*, i32*, i32*, i32) #1

declare dso_local i32 @DeleteObject(i32*) #1

declare dso_local i32 @DestroyWindow(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
